--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,6 +1,7 @@
 header .showcase-content{
     padding: 1rem;;
     text-align: center;
+    height: 90vh;
 }
 .ask{
     /* color: red; */
